--- a/app/src/main/res/layout/list_item_book.xml
+++ b/app/src/main/res/layout/list_item_book.xml
@@ -1,65 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tool="http://schemas.android.com/tools"
-    android:orientation="horizontal"
-    android:weightSum="4"
-    android:padding="@dimen/margin_10dp">
+    android:paddingHorizontal="@dimen/margin_16dp"
+    android:paddingVertical="@dimen/margin_10dp"
+    android:clipToPadding="false">
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher_foreground">
-
-        </ImageView>
-    </LinearLayout>
-
-    <LinearLayout
+    <ImageView
+        android:id="@+id/iv_book"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="3"
-        android:layout_marginLeft="@dimen/margin_10dp"
-        android:layout_gravity="center_vertical">
+        android:layout_alignParentStart="true"
+        android:outlineProvider="bounds"
+        android:elevation="5dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_launcher_foreground" />
+
+    <LinearLayout
+        android:id="@+id/ll_book_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center_vertical"
+        android:layout_marginHorizontal="@dimen/margin_10dp"
+        android:layout_toStartOf="@id/btn_get"
+        android:layout_toEndOf="@id/iv_book"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_book_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tool:text="book_name"/>
+            android:textStyle="bold"
+            tool:text="book_name" />
 
         <TextView
             android:id="@+id/tv_author_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tool:text="author_name"/>
+            tool:text="author_name" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tool:text="4.5/2"/>
-        </LinearLayout>
     </LinearLayout>
 
     <Button
         android:id="@+id/btn_get"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btn_get_text"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center_vertical"
         android:backgroundTint="@color/grey_color"
-        android:textColor="@color/black"
-        android:layout_gravity="center_vertical"/>
-</LinearLayout>
+        android:text="@string/btn_get_text"
+        android:textStyle="bold"
+        android:textColor="@color/black" />
+
+</RelativeLayout>
