--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey_color">#F2F1F7</color>
+    <color name="grey_color_variant">#F0F0F0</color>
 </resources>
