--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,8 +47,10 @@
             android:id="@+id/tv_error_msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableTop="@drawable/ic_info_icon"
             android:text="@string/something_went_wrong"
             android:layout_gravity="center"
+            android:gravity="center_horizontal"
             android:visibility="gone"
             />
     </FrameLayout>
