--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="margin_5dp">5dp</dimen>
     <dimen name="margin_10dp">10dp</dimen>
     <dimen name="margin_16dp">16dp</dimen>
+    <dimen name="margin_30dp">30dp</dimen>
+    <dimen name="margin_60dp">60dp</dimen>
+    <dimen name="margin_100dp">100dp</dimen>
     <dimen name="_1dp">1dp</dimen>
+
+    <dimen name="text_14sp">14sp</dimen>
+    <dimen name="text_16sp">16sp</dimen>
+    <dimen name="text_18sp">18sp</dimen>
 </resources>
